rules/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: name-service
spec:
  host: name-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: boring
    labels:
      version: boring
  - name: cute
    labels:
      version: cute
